# project(
#     'io.elementary.Files.PortalTester',
#     'c', 'vala'
# )

# vala_version_required = '0.50.0'
# vala = meson.get_compiler('vala')
# posix_dep = vala.find_library('posix')

# executable(
#     'io.elementary.Files.PortalTester',
#     'PortalTester.vala',
#     dependencies: [
#         dependency('gtk+-3.0', version: '>=3.20'),
#         posix_dep
#     ],
#     install: true
# )
